[package]
name = "bsky-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
duckdb = "1.4.1"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
