[package]
name = "bsky-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8.6", features = ["macros"] }
duckdb = "1.4.1"
env_logger = "0.11.8"
futures = "0.3"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "io-util", "process"] }
tokio-stream = "0.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
